--- a/01-VPC/.github/workflows/terra.yml
+++ b/01-VPC/.github/workflows/terra.yml
@@ -9,4 +9,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Verfiy terrafrom version
-        run: terrafrom --version
+        run: terraform --version
