modified terraform version

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,5 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Verfiy terrafrom version
+      - uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.2.6
+      - name: Printing terraform version
         run: terraform --version
