--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Changed directory 
         id: ch_dir 
         run: |
-          echo "::set-output name=CH_DIR::$(git diff --name-only HEAD@{0} HEAD@{1} | awk -F / '{print $1}')
+          echo "::set-output name=CH_DIR::$(git diff --name-only HEAD@{0} HEAD@{1} | awk -F / '{print $1}')"
       - name: Printing Changed directory name
         run: echo "{{ steps.ch_dir.outputs.CH_DIR }}"
