--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           terraform_version: 1.2.6
       - name: Printing terraform version
-        run: git log --oneline && terraform --version
+        run: git log --oneline && terraform --version && git diff --name-only HEAD@{0} HEAD@{1} | awk -F / '{print $1}'
       # - name: Changed directory 
       #   id: ch_dir 
       #   run: |
