--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
       - uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.2.6
       - name: Printing terraform version
-        run: git log --oneline && terraform --version && git diff --name-only HEAD@{0} HEAD@{1} | awk -F / '{print $1}'
+        run: git log --oneline && terraform --version 
       # - name: Changed directory 
       #   id: ch_dir 
       #   run: |
