--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,9 +17,5 @@ jobs:
           terraform_version: 1.2.6
       - name: Printing terraform version
         run: git log --oneline && terraform --version 
-      # - name: Changed directory 
-      #   id: ch_dir 
-      #   run: |
-      #     echo "::set-output name=CH_DIR::$(git diff --name-only HEAD@{0} HEAD@{1} | awk -F / '{print $1}')"
-      # - name: Printing Changed directory name
-      #   run: echo "{{ steps.ch_dir.outputs.CH_DIR }}"
+      - name: Get the changed directory 
+        run: bash get_dir.sh
