--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,4 +14,7 @@ jobs:
       - name: Printing terraform version
         run: git log --oneline && terraform --version 
       - name: Get the changed directory 
-        run: bash -v get_dir.sh
+        run: bash -v get_dir.sh 
+      - name: Changed directory
+        run: |
+          or i in `cat /tmp/chg_dir`; do echo  "changing directory $i"; cd $i ; terraform --version; cd -; done
